--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "tools/riscv-torture"]
 	path = tools/riscv-torture
 	url = git@github.com:twistedpeer/fear5-torture.git
+	branch = fear5
