--- a/riscv-arch-tests/Makefile
+++ b/riscv-arch-tests/Makefile
@@ -1,7 +1,6 @@
 include ../common.mk
 
-BIN_DIR := $(BIN_DIR)/riscv-arch-tests
-SRC_DIR := ./src
+OUT_DIR := $(ROOT_DIR)/bin/riscv-arch-tests
 
 ENV_DIR := $(ROOT_DIR)/include/env
 LDFLAGS := -T"$(ENV_DIR)/link.ld" -nostartfiles -nostdlib
@@ -19,52 +18,48 @@ ifneq ($(RISCV_TEST),)
     target_tests = $(RISCV_TEST).elf
 endif
 
-default: all
-
 #--------------------------------------------------------------------
 # Build rules
 #--------------------------------------------------------------------
 
-vpath %.S $(abspath rv32i)
-vpath %.S $(abspath rv32im)
-vpath %.S $(abspath rv32imc)
-vpath %.S $(abspath rv32Zicsr)
-vpath %.S $(abspath rv32Zifencei)
-
-INCLUDE=./Makefile.include
-ifeq ($(wildcard $(INCLUDE)),)
-    $(error Cannot find '$(INCLUDE)`. Check that RISCV_TARGET and RISCV_DEVICE are set correctly.)
-endif
--include $(INCLUDE)
+vpath %.S $(abspath rv32i/src)
+vpath %.S $(abspath rv32im/src)
+vpath %.S $(abspath rv32imc/src)
+vpath %.S $(abspath rv32Zicsr/src)
+vpath %.S $(abspath rv32Zifencei/src)
 
 #------------------------------------------------------------
 # Build and run assembly tests
 
-%.signature.output: %.elf
+default: run
+
+%.signature: %.elf
 	$(V) echo "Execute $(@)"
-	$(V) $(RUN_TARGET)
+	$(call qemu,$(<)) > "$(*).signature"
 
 
 define compile_template
 
-$(BIN_DIR)/%.elf: $(SRC_DIR)/%.S
+$(OUT_DIR)/%.elf: %.S
 	$(V) echo "Compile $$(@)"
 	@mkdir -p $$(@D)
-	$(V) $(COMPILE_TARGET)
+	riscv64-unknown-elf-gcc -march=rv32imac -mabi=ilp32 -static -g -mcmodel=medany -nostartfiles -nostdlib $$(INCLUDES) $$(LDFLAGS) "$$(<)" "$(ENV_DIR)/qemu.c" -o "$$@"
+	riscv64-unknown-elf-objdump -D "$$@" > "$$(@:.elf=.dump)"
+	cp "$$(<)" "$(OUT_DIR)"
 
-.PRECIOUS: $(BIN_DIR)/%.elf
+.PRECIOUS: $(OUT_DIR)/%.elf
 
 endef
 
 $(eval $(call compile_template,-march=rv32imac -mabi=ilp32))
 
-target_elf = $(foreach e,$(target_tests),$(BIN_DIR)/$(e))
-target_log = $(patsubst %.elf,%.signature.output,$(target_elf))
+target_elf = $(foreach e,$(target_tests),$(OUT_DIR)/$(e))
+target_log = $(patsubst %.elf,%.signature,$(target_elf))
 
-run: $(target_log)
+run: clean $(target_log)
 
 #------------------------------------------------------------
 # Clean up
 
 clean:
-	rm -rf $(BIN_DIR)
+	rm -rf $(OUT_DIR)/
