--- a/riscv-torture/Makefile
+++ b/riscv-torture/Makefile
@@ -12,8 +12,7 @@ endif
 
 include ../common.mk
 
-BIN_DIR := $(BIN_DIR)/riscv-torture
-SRC_DIR := $(SRC_DIR)/riscv-torture
+OUT_DIR := $(ROOT_DIR)/bin/riscv-torture
 
 ENV_DIR := $(ROOT_DIR)/include/env
 LDFLAGS := -T"$(ENV_DIR)/link.ld" -nostartfiles -nostdlib
@@ -25,14 +24,12 @@ CFLAGS_EXTRA += -ffunction-sections -fdata-sections \
 TORTURE_DIR := $(abspath $(ROOT_DIR)/tools/riscv-torture)
 
 riscv-torture:
-	mkdir -p $(BIN_DIR)
-	mkdir -p $(SRC_DIR)
+	mkdir -p $(OUT_DIR)
 	make -C "$(TORTURE_DIR)" gen OPTIONS="-o $(PROGRAM) -I $(TORTURE_ISA) -C $(TORTURE_CONFIG)"
-	mv "$(TORTURE_DIR)/output/$(PROGRAM).S" "$(SRC_DIR)"
-	mv "$(TORTURE_DIR)/output/$(PROGRAM).stats" "$(SRC_DIR)"
-	riscv64-unknown-elf-gcc $(CFLAGS_EXTRA) $(LDFLAGS) -o "$(BIN_DIR)/$(PROGRAM).elf" "$(SRC_DIR)/$(PROGRAM).S" "$(ENV_DIR)/qemu.c"
-	qemu-system-riscv32 -M $(QEMU_MACHINE) -bios none -nographic -kernel "$(BIN_DIR)/$(PROGRAM).elf" $(QEMU_TERMINATOR) > "$(BIN_DIR)/$(PROGRAM).signature.output"
+	mv "$(TORTURE_DIR)/output/$(PROGRAM).S" "$(OUT_DIR)"
+	mv "$(TORTURE_DIR)/output/$(PROGRAM).stats" "$(OUT_DIR)"
+	riscv64-unknown-elf-gcc $(CFLAGS_EXTRA) $(LDFLAGS) -o "$(OUT_DIR)/$(PROGRAM).elf" "$(OUT_DIR)/$(PROGRAM).S" "$(ENV_DIR)/qemu.c"
+	$(call qemu,$(OUT_DIR)/$(PROGRAM).elf) > "$(OUT_DIR)/$(PROGRAM).signature"
 
 clean:
-	rm -rf $(BIN_DIR)
-	rm -rf $(SRC_DIR)
+	rm -rf $(OUT_DIR)/
