new, smaller csmith startup code

--- a/csmith/Makefile._old
+++ b/csmith/Makefile._old
@@ -17,15 +17,16 @@ OUT_DIR := $(ROOT_DIR)/bin/csmith
 
 # CSMITHFLAGS := --main --no-argc --no-float --no-math64 --no-longlong
 
-CFLAGS_EXTRA := -march=rv32imac -mabi=ilp32 \
+CFLAGS_EXTRA := -march=rv32imac -mabi=ilp32 -mcmodel=medlow \
 	-I$(ROOT_DIR)/csmith/include \
 	-I$(ROOT_DIR)/include/crt \
-	-O2 -DCSMITH_MINIMAL -DNO_PRINTF \
-	$(ROOT_DIR)/include/crt/crt0.S \
+	-ffunction-sections -fdata-sections \
+	--specs=nano.specs -DMTIME_RATE_HZ_DEF=32768 -O0 -g -w \
 	"$(OUT_DIR)/$(PROGRAM).c" \
-	-nostartfiles -nostdlib \
+	-Wl,--gc-sections -nostartfiles -nostdlib \
 	-L$(ROOT_DIR)/include/crt/ \
-	-T$(ROOT_DIR)/include/crt/link.ld \
+	-T$(ROOT_DIR)/include/crt/link.lds \
+	-Wl,--start-group -lc -lgcc -lm -lmetal -lmetal-gloss -Wl,--end-group \
 	-o "$(OUT_DIR)/$(PROGRAM).elf"
 
 csmith:
